WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49454
ASSERTION when converting some WKStringRefs returned from willSubmitForm to CFStringRef
https://bugs.webkit.org/show_bug.cgi?id=49454
Summary
ASSERTION when converting some WKStringRefs returned from willSubmitForm to C...
Sam Weinig
Reported
2010-11-12 10:35:15 PST
You'll hit this assertion in WKStringCopyCFString: ASSERT(!toImpl(stringRef)->string().isNull()); on submitting a form at
http://webkit.org/new-bug
if you convert the values in the WKDictionaryRef passed in the willSubmitForm callback to CFStringRefs using WKStringCopyCFString due to some of the strings being null WTF::Strings.
Attachments
Patch
(2.85 KB, patch)
2010-11-12 10:37 PST
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2010-11-12 10:35:53 PST
<
rdar://problem/8662180
>
Sam Weinig
Comment 2
2010-11-12 10:37:04 PST
Created
attachment 73757
[details]
Patch
Sam Weinig
Comment 3
2010-11-12 10:40:04 PST
Fixed in
r71930
.
Adam Roben (:aroben)
Comment 4
2010-11-12 10:44:41 PST
No test? :-(
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug