ASSERTION when converting some WKStringRefs returned from willSubmitForm to CFStringRef <rdar://problem/8662180> https://bugs.webkit.org/show_bug.cgi?id=49454

Reviewed by Anders Carlsson.

Enforce the invariant that a WebString never contains a null WTF::String at a
lower level, in the WebString constructor, instead of relying on the callers of
WebString::create to do it.

* Shared/API/c/WKSharedAPICast.h:
(WebKit::toAPI):
(WebKit::toCopiedAPI): Remove null string check...

* Shared/WebString.h:
(WebKit::WebString::WebString): ... and move it to the constructor.

* Shared/API/c/WKURL.cpp:
(WKURLCopyString): Use toCopiedAPI() instead of calling WebString directly
to match other similar uses.



Canonical link: https://commits.webkit.org/62404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71930 268f45cc-cd09-0410-ab3c-d52691b4dbfc